update with slide

--- a/publication.html
+++ b/publication.html
@@ -116,7 +116,7 @@
 				
 				<div class="text_container" id="text_container">
 				<p> Discovering Visual Patterns in Art Collections with Spatially-consistent Feature Learning</p>
-				<p class="author_style" id="author_style"> <b>X. Shen</b>, <a href="https://people.eecs.berkeley.edu/~efros/">A. Efros</a>, <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
+				<p class="author_style" id="author_style"> <b>X. Shen</b>, <a href="https://people.eecs.berkeley.edu/~efros/">A.A. Efros</a>, <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
 				<p> CVPR 2019</p>
 				<p> <a href="http://imagine.enpc.fr/~shenx/ArtMiner"> [Project Webpage] </a> &nbsp <a href="paper/ArtMiner/artMiner2019CVPR.pdf"> [PDF] </a> &nbsp <a href="https://github.com/XiSHEN0220/ArtMiner"> [Code] </a> &nbsp <a href="http://imagine.enpc.fr/~shenx/ArtMiner/artMiner.pdf"> [Slides] </a> </p>
 				</div>	
