--- a/publication.html
+++ b/publication.html
@@ -139,7 +139,7 @@
 			<div id="paper_container">
                 
 				<div class="teaser_container" id="teaser_container"> 
-					<img class="paperImg" src="paper/Brueghel/brueghel.PNG" alt="Teaser"> 
+					<img class="paperImg" src="paper/Brueghel/brueghel.jpg" alt="Teaser"> 
 				</div>
 				
 				<div class="text_container" id="text_container">
