--- a/publication.html
+++ b/publication.html
@@ -132,7 +132,7 @@
 				<p> Marginalized Average Attentional Network For Weakly-Supervised Learning</p>
 				<p class="author_style" id="author_style"> Y. Yuan, Y. LYU, <b>X. Shen</b>, <a href="https://www.uts.edu.au/staff/ivor.tsang">IW. Tsang</a>, <a href="https://sites.google.com/view/dyyeung/">DY. Yeung</a></p>
 				<p> ICLR 2019</p>
-				<p> <a href="paper/MAAN/MAAN.pdf"> [PDF] </a> </p>
+				<p> <a href="paper/MAAN/MAAN.pdf"> [PDF] </a> &nbsp <a href="https://github.com/yyuanad/MAAN"> [Code] </a> </p>
 				</div>	
 			</div>
 			<br>
