--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div> -->
                 </div>
 				<div class="item photo">
-                    <img class="avatar" src="img/xishen.png" alt="Profile">
+                    <img class="avatar" src="img/xishen.jpg" alt="Profile">
 					
 					<div id="circles_container">
                         <a href='http://github.com/XiSHEN0220'><img class="iconImg" src="img/github.png" alt="Github"> </a>
