--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     
                     <h1 align="left">News :</h1>
                     <ul>
-                                          <li><p>2019.05 : Visit <a href='https://bair.berkeley.edu/'>Berkeley AI Lab (BAIR)</a></p></li>
-					  <li><p>2019.03 : Our Paper "<a href="publication.html">Discovering Visual Patterns in Art Collections with Spatially-consistent Feature Learning</a>" accepted at <a href="http://cvpr2019.thecvf.com">CVPR 2019</a></p></li>
+                      <li><p>2019.05 : Visit <a href='https://bair.berkeley.edu/'>Berkeley AI Lab (BAIR)</a></p></li>
+					  <li><p>2019.03 : Our Paper "<a href="publication.html">Discovering Visual Patterns in Art Collections with Spatially-consistent Feature Learning</a>" accepted at <a href="http://cvpr2019.thecvf.com">CVPR 2019</a>, and was featured / cited in several medias such as <a href="https://www.nature.com/articles/d41586-019-01794-3">Nature</a>, <a href="https://techxplore.com/news/2019-03-approach-visual-patterns-art.html">TechXplore</a>.</p></li>
 					  <li><p>2019.01 : Our paper "<a href="publication.html">Marginalized Average Attentional Network For Weakly-Supervised Learning"</a> accepted at <a href="https://iclr.cc/">ICLR 2019</a> </p></li>
 					  <li><p>2018.06 : Visit <a href='https://bair.berkeley.edu/'>Berkeley AI Lab (BAIR)</a></p></li>
 		</ul>
