--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     
                     <h1 align="left">About me : </h1>
                     <p>&nbsp &nbsp &nbsp &nbsp I am a PhD student in the <a href="http://imagine.enpc.fr/">IMAGINE team</a>, <a href="http://www.enpc.fr/">École des Ponts ParisTech</a>, advised by <a href="http://imagine.enpc.fr/~aubrym/">Prof. Mathieu Aubry</a>. I graduated from the Master <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/">Vision et Apprentissage</a> (MVA, ENS Paris-Saclay) and Engineering Program at <a href="http://www.enpc.fr/">Ecole des Ponts ParisTech</a>. Before that, I received double B.S. degrees in Mechanics from Université Claude Bernard Lyon and Physics from Wuhan University.</p>
-                    <p>&nbsp &nbsp &nbsp &nbsp I am interested in Computer Vision, Deep Learning. During my PhD, I try to find solutions for several tasks without annotations (unsupervised learning) or with easy accessible annotations (weakly supervised learning).</p>
+                    <p>&nbsp &nbsp &nbsp &nbsp I am interested in Computer Vision, Deep Learning. My research mainly focuses on finding solutions to several image/video tasks without annotations (unsupervised learning) or with easy accessible annotations (weakly supervised learning).</p>
                     
 					<!-- <div id="circles_container">
                         <div class="circle" style="background-color: #274497;">
