--- a/publication.html
+++ b/publication.html
@@ -119,7 +119,7 @@
 				<p class="author_style" id="author_style"> <b>X. Shen</b>&nbsp<a href="http://www.chartes.psl.eu/en/ilaria-pastrolin">I. Pastrolin</a>&nbsp O. Bounou &nbsp S. Gidaris &nbsp <a href="http://www.chartes.psl.eu/fr/marc-smith">M. Smith</a> &nbsp <a href="http://www.chartes.psl.eu/fr/olivier-poncet">O. Poncet</a> &nbsp <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
             
 				<p> Submitted to PAMI</p>
-				<p> <a href="http://imagine.enpc.fr/~shenx/Watermark"> [Project website] </a> &nbsp <a href="paper/Watermark/watermarkReco.pdf"> [PDF] </a> &nbsp <a href="https://github.com/XiSHEN0220/watermarkReco"> [Code] </a> </p>
+				<p> [<a href="http://imagine.enpc.fr/~shenx/Watermark">Project website</a>] &nbsp [<a href="paper/Watermark/watermarkReco.pdf">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/watermarkReco">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
@@ -135,7 +135,7 @@
 				<p> Discovering Visual Patterns in Art Collections with Spatially-consistent Feature Learning</p>
 				<p class="author_style" id="author_style"> <b>X. Shen</b> &nbsp <a href="https://people.eecs.berkeley.edu/~efros/">A.A. Efros</a> &nbsp <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
 				<p> CVPR 2019</p>
-				<p> <a href="http://imagine.enpc.fr/~shenx/ArtMiner"> [Project website] </a> &nbsp <a href="paper/ArtMiner/artMiner2019CVPR.pdf"> [PDF] </a> &nbsp <a href="https://github.com/XiSHEN0220/ArtMiner"> [Code] </a> &nbsp <a href="http://imagine.enpc.fr/~shenx/ArtMiner/artMiner.pdf"> [Slides] </a> </p>
+				<p> [<a href="http://imagine.enpc.fr/~shenx/ArtMiner">Project website</a>] &nbsp [<a href="paper/ArtMiner/artMiner2019CVPR.pdf">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/ArtMiner">Code</a>] &nbsp [<a href="http://imagine.enpc.fr/~shenx/ArtMiner/artMiner.pdf">Slides</a>] </p>
 				</div>	
 			</div>
 			<br>
@@ -149,7 +149,7 @@
 				<p> Marginalized Average Attentional Network For Weakly-Supervised Learning</p>
 				<p class="author_style" id="author_style"> <a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ&hl=en">Y. Yuan</a> &nbsp Y. LYU &nbsp <b>X. Shen</b> &nbsp <a href="https://www.uts.edu.au/staff/ivor.tsang">IW. Tsang</a> &nbsp <a href="https://sites.google.com/view/dyyeung/">DY. Yeung</a></p>
 				<p> ICLR 2019</p>
-				<p> <a href="paper/MAAN/MAAN.pdf"> [PDF] </a> &nbsp <a href="https://github.com/yyuanad/MAAN"> [Code] </a> </p>
+				<p> [<a href="paper/MAAN/MAAN.pdf">PDF</a>] &nbsp [<a href="https://github.com/yyuanad/MAAN">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
@@ -163,7 +163,7 @@
 				<p> The Burgeoning Computer-Art Symbiosis</p>
 				<p class="author_style" id="author_style"> <a href="http://people.eecs.berkeley.edu/~shiry/">S. Ginosar</a> &nbsp <b>X. Shen</b> &nbsp K. Dwivedi &nbsp <a href="http://arthistory.berkeley.edu/person/1639585-elizabeth-honig">E. Honig</a> &nbsp <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
 				<p> XRDS 2018</p>
-				<p> <a href="paper/Brueghel/ginosar_computer_art.pdf"> [PDF] </a> </p>
+				<p> [<a href="paper/Brueghel/ginosar_computer_art.pdf">PDF</a>] </p>
 				</div>	
 			</div>
 			
@@ -178,7 +178,7 @@
 				<p> A Method of Synthesizing Handwritten Chinese Images for Data Augmentation</p>
 				<p class="author_style" id="author_style"> <b>X. Shen</b> &nbsp R. Messina</p>
 				<p> ICFHR 2016</p>
-				<p> <a href="paper/ICFHR/ICFHR2016XS.pdf"> [PDF] </a> </p>
+				<p> [<a href="paper/ICFHR/ICFHR2016XS.pdf">PDF</a>] </p>
 				</div>	
 			</div>
          </div>
