--- a/publication.html
+++ b/publication.html
@@ -115,11 +115,11 @@
 				</div>
 				
 				<div class="text_container" id="text_container">
-				<p> Large-Scale Historical Watermark Recognition:dataset and a new consistency-based approach</p>
+				<p> Large-Scale Historical Watermark Recognition: dataset and a new consistency-based approach</p>
 				<p class="author_style" id="author_style"> <b>X. Shen</b>&nbsp<a href="http://www.chartes.psl.eu/en/ilaria-pastrolin">I. Pastrolin</a>&nbsp O. Bounou &nbsp S. Gidaris &nbsp <a href="http://www.chartes.psl.eu/fr/marc-smith">M. Smith</a> &nbsp <a href="http://www.chartes.psl.eu/fr/olivier-poncet">O. Poncet</a> &nbsp <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
             
 				<p> Submitted to PAMI</p>
-				<p> [<a href="http://imagine.enpc.fr/~shenx/Watermark">Project website</a>] &nbsp [<a href="paper/Watermark/watermarkReco.pdf">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/watermarkReco">Code</a>] </p>
+				<p> [<a href="http://imagine.enpc.fr/~shenx/Watermark">Project website</a>] &nbsp [<a href="http://arxiv.org/pdf/1908.10254.pdf">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/watermarkReco">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
