--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<div id="circles_container">
                         <a href='http://github.com/XiSHEN0220'><img class="iconImg" src="img/github.png" alt="Github"> </a>
 						<a href='http://www.linkedin.com/in/xi-shen-48a44569/'> <img class="iconImg" src="img/linkedin.png" alt="Linkedin"> </a>
-						<a href='404.html'><img class="iconImg" src="img/cv.png" alt="CV"> </a>
+						<a href='xishen.pdf'><img class="iconImg" src="img/cv.png" alt="CV"> </a>
 						<a href='https://scholar.google.com/citations?user=nKSXus4AAAAJ&hl=en'><img class="iconImg" src="img/googleScholar.png" alt="Google Scholar"> </a>
 						
                     </div>
