--- a/publication.html
+++ b/publication.html
@@ -121,7 +121,7 @@
             
 				<p> ICLR, 2020</p>
 				<!--<p> [<a href="http://imagine.enpc.fr/~shenx/Watermark">Project website</a>] &nbsp [<a href="https://openreview.net/pdf?id=Hkg-xgrYvH">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/watermarkReco">Code</a>] </p> -->
-				<p>  [<a href="https://openreview.net/pdf?id=Hkg-xgrYvH">PDF</a>] &nbsp [<a href="">Code (Coming soon)</a>] </p>
+				<p>  [<a href="https://openreview.net/pdf?id=Hkg-xgrYvH">PDF</a>] &nbsp [<a href="https://github.com/hushell/sib_meta_learn">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
