--- a/publication.html
+++ b/publication.html
@@ -120,12 +120,13 @@
 				<p> RANSAC-Flow: generic two-stage image alignment</p>
 				<p class="author_style" id="author_style"> <b>X. Shen</b> &nbsp <a href="https://imagine-lab.enpc.fr/staff-members/francois-darmon/">F. Darmon</a> &nbsp <a href="https://people.eecs.berkeley.edu/~efros/">A.A. Efros</a> &nbsp <a href="http://imagine.enpc.fr/~aubrym/">M. Aubry</a></p>
             
-				<!--<p> ICLR, 2020</p>-->
+				<p> Arxiv, 2020</p>
 				<!--<p> [<a href="http://imagine.enpc.fr/~shenx/Watermark">Project website</a>] &nbsp [<a href="https://openreview.net/pdf?id=Hkg-xgrYvH">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/watermarkReco">Code</a>] </p> -->
 				<p>  [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow">Project website</a>] &nbsp [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow/img/demo_ransac_flow.mp4">Demo</a>] &nbsp [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow/RANSAC_Flow.pdf">PDF</a>] &nbsp [<a href="https://github.com/XiSHEN0220/RANSAC-Flow">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
+			
 			
 			
 			
