--- a/publication.html
+++ b/publication.html
@@ -122,7 +122,7 @@
             
 				<p> <a href='https://eccv2020.eu/'>ECCV, 2020</a> (Spotlight)</p>
 				
-				<p>  [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow">Project website</a>] &nbsp [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow/img/demo_ransac_flow.mp4">Demo</a>] &nbsp [<a href="http://arxiv.org/abs/2004.01526">PDF</a>] &nbsp [<a href="http://github.com/XiSHEN0220/RANSAC-Flow">Code</a>] </p>
+				<p>  [<a href="http://imagine.enpc.fr/~shenx/RANSAC-Flow">Project website</a>] &nbsp [<a href="https://youtu.be/ltZpqRtuA6A">Demo</a>] &nbsp [<a href="http://arxiv.org/abs/2004.01526">PDF</a>] &nbsp [<a href="http://github.com/XiSHEN0220/RANSAC-Flow">Code</a>] </p>
 				</div>	
 			</div>
 			<br>
