--- a/publication.html
+++ b/publication.html
@@ -186,7 +186,7 @@
 				
 				<div class="text_container" id="text_container">
 				<p> Marginalized Average Attentional Network For Weakly-Supervised Learning</p>
-				<p class="author_style" id="author_style"> <a href="https://scholar.google.com/citations?user=9tI89HMAAAAJ&hl=en">Y. Yuan</a> &nbsp Y. LYU &nbsp <b>X. Shen</b> &nbsp <a href="https://www.uts.edu.au/staff/ivor.tsang">IW. Tsang</a> &nbsp <a href="https://sites.google.com/view/dyyeung/">DY. Yeung</a></p>
+				<p class="author_style" id="author_style"> <a href="https://yyuanad.github.io/">Y. Yuan</a> &nbsp Y. LYU &nbsp <b>X. Shen</b> &nbsp <a href="https://www.uts.edu.au/staff/ivor.tsang">IW. Tsang</a> &nbsp <a href="https://sites.google.com/view/dyyeung/">DY. Yeung</a></p>
 				<p> ICLR 2019</p>
 				<p> [<a href="paper/MAAN/MAAN.pdf">PDF</a>] &nbsp [<a href="https://github.com/yyuanad/MAAN">Code</a>] </p>
 				</div>	
