--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function LoadMore() {
               <p style="text-align:center">
               <div id="circles_container">
                   <a href='http://github.com/XiSHEN0220'><img class="iconImg" src="images/github.png" alt="Github">GitHub</a>
-                  <a href='data/xishen.pdf'><img class="iconImg" src="images/cv.png" alt="CV">CV</a>
+                  <a href='Xi_Shen_CV.pdf'><img class="iconImg" src="images/cv.png" alt="CV">CV</a>
                   <a href='https://scholar.google.com/citations?user=nKSXus4AAAAJ&hl=en'><img class="iconImg" src="images/googleScholar.png" alt="Google Scholar">Google Scholar</a>
                   
                 </div>
@@ -91,7 +91,7 @@ function LoadMore() {
         </li>
         <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">03 / 12 / 2021</b>&emsp;
-          I am defending my Ph.D. today! <a href="https://ai.tencent.com">[Slides]</a> <a href="https://ai.tencent.com">[Thesis]</a>
+          I am defending my Ph.D. today! <a href="Xi_Shen_defense_slides">[Slides]</a> <a href="Xi_Shen_thesis">[Thesis]</a>
         </li>
         <li>
           <b style="background-color:#ddd;">29 / 10 / 2021</b>&emsp;
