--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function LoadMore() {
         </li>
         <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">03 / 12 / 2021</b>&emsp;
-          I am defending my Ph.D. today! <a href="Xi_Shen_defense_slides">[Slides]</a> <a href="Xi_Shen_thesis">[Thesis]</a>
+          I am defending my Ph.D. today! <a href="Xi_Shen_defense_slides.pdf">[Slides]</a> <a href="Xi_Shen_thesis.pdf">[Thesis]</a>
         </li>
         <li>
           <b style="background-color:#ddd;">29 / 10 / 2021</b>&emsp;
