--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ function LoadMore() {
     
         <ul>
         <li>
+          <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">25 / 02 / 2022</b>&emsp;
+          Our paper <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"Self-Supervised Transformers for Unsupervised Object Discovery using Normalized Cut"</a> is published on arXiv.
+        </li>
+        <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">13 / 01 / 2022</b>&emsp;
           Our paper <a href="http://imagine.enpc.fr/~shenx/HisImgAnalysis/">"Spatially-consistent Feature Matching and Learning for Heritage Image Analysis"</a> is accepted to <a href="https://nips.cc/">IJCV</a>.
         </li>
@@ -174,7 +178,8 @@ function LoadMore() {
               </br>
               <a href="https://www.m-psi.fr/Papers/TokenCut2022/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2202.11539.pdf">[PDF]</a> &nbsp;
-              <a href="https://gricad-gitlab.univ-grenoble-alpes.fr/wangyan/tokencut">[Code]</a>
+              <a href="https://github.com/YangtaoWANG95/TokenCut">[Code (GitHub)]</a>              
+              <a href="https://gricad-gitlab.univ-grenoble-alpes.fr/wangyan/tokencut">[Code (GitLab)]</a>
               
 
             </td>
