--- a/index.html
+++ b/index.html
@@ -555,9 +555,9 @@ function LoadMore() {
               <td width="10%"><p> <a class="github-button" href="https://github.com/yingyichen-cyy/Nested-Co-teaching/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true">Fork</a></p></td>
               <td width="20%">Nested-Co-teaching</td>
 
-              <td width="10%"><p> </p></td>
-             <td width="20%"></td>
-             <td width="20%"></td>
+              <td width="10%"><p> <a class="github-button" href="https://github.com/YangtaoWANG95/TokenCut" data-icon="octicon-star" data-size="large" data-show-count="true">Star</a></p></td>
+              <td width="10%"><p> <a class="github-button" href="https://github.com/YangtaoWANG95/TokenCut/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true">Fork</a></p></td>
+              <td width="20%">TokenCut</td>
 
 
               
