--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@ function LoadMore() {
               </br>
               <a href="https://www.m-psi.fr/Papers/TokenCut2022/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2202.11539.pdf">[PDF]</a> &nbsp;
-              <a href="https://github.com/YangtaoWANG95/TokenCut">[Code (GitHub)]</a>              
+              <a href="https://github.com/YangtaoWANG95/TokenCut">[Code (GitHub)]</a> &nbsp;
+              <a href="https://colab.research.google.com/assets/colab-badge.svg">[Colab]</a> &nbsp;
+              <a href="https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue">[Gradio Demo]</a> &nbsp;
               <a href="https://gricad-gitlab.univ-grenoble-alpes.fr/wangyan/tokencut">[Code (GitLab)]</a>
               
 
@@ -459,8 +461,8 @@ function LoadMore() {
               </a>
               </br>
             
-            <a href="https://yyuanad.github.io/">Yuan Yuan</a>
-            <a href="https://yueminglyu.github.io/">Yueming Lyu</a>  
+            <a href="https://yyuanad.github.io/">Yuan Yuan</a>, 
+            <a href="https://yueminglyu.github.io/">Yueming Lyu</a>,   
             <strong>Xi Shen</strong>,
             <a href="https://www.uts.edu.au/staff/ivor.tsang">Ivor Tsang</a>,
             <a href="https://sites.google.com/view/dyyeung/">Dit-Yan Yeung</a>
