--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ function LoadMore() {
               <a href="https://www.m-psi.fr/Papers/TokenCut2022/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2202.11539.pdf">[PDF]</a> &nbsp;
               <a href="https://github.com/YangtaoWANG95/TokenCut">[Code (GitHub)]</a> &nbsp;
-              <a href="https://colab.research.google.com/assets/colab-badge.svg">[Colab]</a> &nbsp;
-              <a href="https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-Spaces-blue">[Gradio Demo]</a> &nbsp;
+              <a href="https://colab.research.google.com/github/YangtaoWANG95/TokenCut/blob/master/inference_demo.ipynb">[Colab]</a> &nbsp;
+              <a href="https://huggingface.co/spaces/akhaliq/TokenCut">[Gradio Demo]</a> &nbsp;
               <a href="https://gricad-gitlab.univ-grenoble-alpes.fr/wangyan/tokencut">[Code (GitLab)]</a>
               
 
