--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@ function LoadMore() {
     
         <ul>
         <li>
+          <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">02 / 03 / 2022</b>&emsp;
+           <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"TokenCut"</a> is accepted to CVPR 2022. Check <a href="https://huggingface.co/spaces/akhaliq/TokenCut">Gradio Demo</a> here. 
+        </li>  
+        <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">25 / 02 / 2022</b>&emsp;
-          Our paper <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"Self-Supervised Transformers for Unsupervised Object Discovery using Normalized Cut"</a> is published on arXiv.
+          Our paper <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"Self-Supervised Transformers for Unsupervised Object Discovery using Normalized Cut"</a> (TokenCut) is published on arXiv.
         </li>
         <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">13 / 01 / 2022</b>&emsp;
@@ -174,7 +178,7 @@ function LoadMore() {
                 <a href="http://crowley-coutaz.fr/jlc/jlc.html">James Crowley</a>,
                 <a href="https://research.vaufreydaz.org/">Dominique Vaufreydaz</a>
               </br>
-              <em>arXiv</em>, 2022
+              <em>CVPR</em>, 2022
               </br>
               <a href="https://www.m-psi.fr/Papers/TokenCut2022/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2202.11539.pdf">[PDF]</a> &nbsp;
