--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@ function LoadMore() {
               <em>IJCV</em>, 2022
               </br>
               <a href="http://imagine.enpc.fr/~shenx/HisImgAnalysis/">[Project page]</a> &nbsp;
-              <a href="todo">[PDF]</a>
+              <a href="https://link.springer.com/article/10.1007/s11263-022-01576-x">[PDF (Springer)]</a>
+              &nbsp;
+              <a href="https://hal.archives-ouvertes.fr/hal-03620996">[PDF (HAL)]</a>
             </td>
         </tr>
 
