--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ function LoadMore() {
               </a>
               </br>
               
-              Yangtao Wang,
+              <a href="https://yangtaowang95.github.io/">Yangtao Wang</a>,
               <strong>Xi Shen<sup>+</sup></strong>,
               <a href="http://hushell.github.io">Xu Hu</a>, 
                 <a href="https://yyuanad.github.io">Yuan Yuan</a>,
@@ -504,7 +504,7 @@ function LoadMore() {
           <li> BMVC: 2019 - 2021</li>
           </ul>
           -->
-					<p>&nbsp; &nbsp; &nbsp; &nbsp; ICML 2022, CVPR 2022, NeurIPS 2021, ICLR 2020 - 2021, BMVC 2019 - 2021. </p>
+					<p>&nbsp; &nbsp; &nbsp; &nbsp; ICML 2022, CVPR 2022, ECCV 2022， NeurIPS 2021 - 2022, ICLR 2020 - 2021, BMVC 2019 - 2021. </p>
           <h3> Teacher Assistant </h3>
           <ul>
           <li> 
