--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ function LoadMore() {
               <a href="https://ai.facebook.com/people/armand-joulin/">Armand Joulin</a>,
               <a href="http://imagine.enpc.fr/~aubrym/">Mathieu Aubry</a>
               </br>
-              <em>arXiv</em>, 2021
+              <em>CVPR workshop</em> <a href="https://image-matching-workshop.github.io/">Image Matching</a> and <a href="https://sites.google.com/view/t4v-cvpr22">Transformer</a>, 2022
               </br>
               <a href="http://imagine.enpc.fr/~shenx/SegSwap/">[Project page]</a> &nbsp;
               <a href="http://arxiv.org/abs/2110.15904">[PDF]</a> &nbsp;
