--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function LoadMore() {
         <ul>
         <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">19 / 06 / 2022</b>&emsp;
-           CVPR 2022 workshop presentations: <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"TokenCut"</a> in <a href="https://sites.google.com/view/l3d-ivu/">"L3D"</a> and <a href="http://imagine.enpc.fr/~shenx/SegSwap/">"SegSwap"</a> in <a href="https://image-matching-workshop.github.io/">"Image Matching"</a> and <a href="https://sites.google.com/view/t4v-cvpr22">"Transformer"</a>.
+           CVPR 2022 workshop presentations: <a href="https://www.m-psi.fr/Papers/TokenCut2022/">"TokenCut"</a> in <a href="https://sites.google.com/view/l3d-ivu/">"L3D"</a>;  <a href="http://imagine.enpc.fr/~shenx/SegSwap/">"SegSwap"</a> in <a href="https://image-matching-workshop.github.io/">"Image Matching"</a> and <a href="https://sites.google.com/view/t4v-cvpr22">"Transformer"</a>.
         </li>  
           
         <li>
@@ -258,7 +258,7 @@ function LoadMore() {
               <a href="https://ai.facebook.com/people/armand-joulin/">Armand Joulin</a>,
               <a href="http://imagine.enpc.fr/~aubrym/">Mathieu Aubry</a>
               </br>
-              <em>CVPR workshop</em> <a href="https://image-matching-workshop.github.io/">Image Matching</a> and <a href="https://sites.google.com/view/t4v-cvpr22">Transformer</a>, 2022
+              <em>CVPR </em> <a href="https://image-matching-workshop.github.io/">Image Matching</a> workshop and <a href="https://sites.google.com/view/t4v-cvpr22">Transformer</a> workshop, 2022
               </br>
               <a href="http://imagine.enpc.fr/~shenx/SegSwap/">[Project page]</a> &nbsp;
               <a href="http://arxiv.org/abs/2110.15904">[PDF]</a> &nbsp;
