--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     #more {display: none;}
   </style>
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/tencent_ai_logo.png">
+  <link rel="icon" type="image/png" href="images/web_icon.jpeg">
 <script async defer src="https://buttons.github.io/buttons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
