--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@ function LoadMore() {
     
         <ul>
         <li>
+          <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">01 / 03 / 2023</b>&emsp;
+           Three papers are accepted by CVPR 2023, thanks to all my co-authors!
+        </li>  
+        <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">15 / 01 / 2023</b>&emsp;
            Our paper <a href="https://mael-zys.github.io/T2M-GPT/">T2M-GPT: Generating Human Motion from Textual Descriptions with Discrete Representations</a> is available on arXiv.
         </li>
@@ -121,6 +125,8 @@ function LoadMore() {
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">13 / 01 / 2022</b>&emsp;
           Our paper <a href="http://imagine.enpc.fr/~shenx/HisImgAnalysis/">"Spatially-consistent Feature Matching and Learning for Heritage Image Analysis"</a> is accepted to <a href="https://nips.cc/">IJCV</a>.
         </li>
+        <span id="dots"> </span>
+        <span id="more">
         <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">28 / 12 / 2021</b>&emsp;
           I join <a href="https://ai.tencent.com">Tencent AI Lab</a> as a Senior Researcher, I will work with <a href="https://juew.org/">Dr. Jue Wang</a> on Computer Vision.
@@ -137,8 +143,7 @@ function LoadMore() {
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">29 / 09 / 2021</b>&emsp;
           Our paper <a href="http://imagine.enpc.fr/~shenx/SSR/">"Re-ranking for image retrieval and transductive few-shot classification"</a> is accepted to <a href="https://nips.cc/">Neurips 2021</a>.
         </li>
-        <span id="dots"> </span>
-        <span id="more">
+        
           <li>
           <b style="background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);">18 / 04 / 2021</b>&emsp;
           Our paper "<a href="https://imagine.enpc.fr/~shenx/ImageCollation/"> Image Collation: Matching illustrations in manuscripts</a>" is accepted to <a href="https://icdar2021.org/">ICDAR 2021</a>.
@@ -211,7 +216,7 @@ function LoadMore() {
               Hongtao Lu,
               <strong>Xi Shen<sup>+</sup></strong>
               </br>
-              <em>arXiv</em>, 2023
+              <em>CVPR</em>, 2023
               </br>
               <a href="https://mael-zys.github.io/T2M-GPT/">[Project page]</a> &nbsp;
               <a href="https://github.com/Mael-zys/T2M-GPT/blob/main/T2M-GPT.pdf">[PDF]</a> &nbsp;
@@ -244,7 +249,7 @@ function LoadMore() {
               Ying Shan,
               Fei Wang
               </br>
-              <em>arXiv</em>, 2023
+              <em>CVPR</em>, 2023
               </br>
               <a href="https://sadtalker.github.io/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2211.12194.pdf">[PDF]</a> &nbsp;
