--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@ function LoadMore() {
               Weihuang Liu,
               <strong>Xi Shen</strong>,
               <a href="https://www.cis.um.edu.mo/~cmpun/">Chi-Man Pun<sup>+</sup></a>
+              <a href="https://vinthony.github.io/academic/">Xiaodong Cun<sup>+</sup></a>
+              
               </br>
               <em>CVPR</em>, 2023
               </br>
