--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@ function LoadMore() {
               Fei Wang
               </br>
               <em>CVPR</em>, 2023
+              [Top 10 you won't miss papers of CVPR 2023.(voxel51)](https://medium.com/voxel51/cvpr-2023-survival-guide-504e965e1f8b)
               </br>
               <a href="https://sadtalker.github.io/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/pdf/2211.12194.pdf">[PDF]</a> &nbsp;
@@ -633,6 +634,7 @@ function LoadMore() {
             <a href="http://imagine.enpc.fr/~aubrym/">Mathieu Aubry</a>
               </br>
               <em>CVPR</em>, 2019
+              [Covered by Nature](https://www.nature.com/articles/d41586-019-01794-3)
               </br>
               <a href="http://imagine.enpc.fr/~shenx/ArtMiner/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/abs/1903.02678">[PDF]</a> &nbsp;
