--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ function LoadMore() {
               </p>
               
               <p>
-                <b>Bio: </b>I am the Cheif Scientist at <a href="https://www.intellindust.com/">Intellindust</a>. My team aims at developping simple and effective computer vision algorimths on low-cost edge devices. Tech transfer can be found <a href="https://www.intellindust.com/">here</a>.
+                <b>Bio: </b>I am the Chief Scientist at <a href="https://www.intellindust.com/">Intellindust</a>. My team aims at developping simple and effective computer vision algorimths on low-cost edge devices. Tech transfer can be found <a href="https://www.intellindust.com/">here</a>.
               </p>
               
               <p>
