--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ function LoadMore() {
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div style="display: flex; justify-content: center;">
-                <img src='images/livelyspeaker.png' width="160" >
+                <img src='images/livelyspeaker.gif' width="160" >
               </div>
               
             </td>
