--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function LoadMore() {
               </p>
               
               <p>
-                I completed my Ph.D. within the <a href="http://imagine.enpc.fr/">IMAGINE team</a>, <a href="http://www.enpc.fr/">École des Ponts ParisTech</a> under the supervision of <a href="http://imagine.enpc.fr/~aubrym/">Prof. Mathieu Aubry</a>. I also collaborate closely closely with <a href="https://people.eecs.berkeley.edu/~efros/"> Prof. Alexei A. Efros</a> from UC Berkeley. Previously, I was a Senior Researcher at  <a href="https://ai.tencent.com">Tencent AI Lab</a>, Shenzhen, China.
+                I completed my Ph.D. within the <a href="http://imagine.enpc.fr/">IMAGINE team</a>, <a href="http://www.enpc.fr/">École des Ponts ParisTech</a> under the supervision of <a href="http://imagine.enpc.fr/~aubrym/">Prof. Mathieu Aubry</a>. I also collaborate closely with <a href="https://people.eecs.berkeley.edu/~efros/"> Prof. Alexei A. Efros</a> from UC Berkeley. Previously, I was a Senior Researcher at  <a href="https://ai.tencent.com">Tencent AI Lab</a>, Shenzhen, China.
               </p>
               <p>
               I completed the Master <a href="http://math.ens-paris-saclay.fr/version-francaise/formations/master-mva/">Vision et Apprentissage</a> program at ENS Paris-Saclay and the Engineering Program at <a href="http://www.enpc.fr/">Ecole des Ponts ParisTech</a>. Prior to that, I received dual B.S. degrees in Mechanics from <a href="https://www.univ-lyon1.fr/">Université Claude Bernard Lyon</a> and Physics from <a href="https://en.whu.edu.cn/">Wuhan University</a>. 
