--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function LoadMore() {
               </p>
 
               <p>
-              If the internship opportunity focusing on safety AI and streamlined training catches your attention, don't hesitate to reach out via email. Relevant areas of interest may include self-supervised representation learning, low-shot learning, coreset selection, uncertainty estimation, and real-time low-light video enhancement.
+              If the internship opportunity focusing on safety AI and efficient training catches your attention, don't hesitate to reach out via email. Relevant areas of interest may include self-supervised representation learning, low-shot learning, coreset selection, uncertainty estimation, and real-time low-light video enhancement.
               </p>
 
               <p style="text-align:center">
