--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@ function LoadMore() {
               <a class="github-button" href="https://github.com/YutingLi0606/SURE" data-icon="octicon-star" data-size="medium" data-show-count="true">Star</a>
             </br>
               <a href="https://github.com/LIYangggggg/SSB-OSR/blob/main/docs/SURE_OOD.pdf">[Tech. Report SURE-OOD]</a> &nbsp;
-              <a href="https://github.com/LIYangggggg/SSB-OSR">[Code SURE-OOD (GitHub)]</a> &nbsp;
-              <a class="github-button" href="https://github.com/LIYangggggg/SSB-OSR" data-icon="octicon-star" data-size="medium" data-show-count="true">Star</a>
+              <a href="https://github.com/Intellindust-AI-Lab/SSB-OSR">[Code SURE-OOD (GitHub)]</a> &nbsp;
+              <a class="github-button" href="https://github.com/Intellindust-AI-Lab/SSB-OSR" data-icon="octicon-star" data-size="medium" data-show-count="true">Star</a>
                
             </td>
             </tr>
