--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ function LoadMore() {
               </br>
               <em>arXiv</em>, 2025
               </br>
-              <a href="https://intellindust-ai-lab.github.io/projects/SKEL-CF/">[Project page]</a> &nbsp;
+              <a href="https://pokerman8.github.io/SKEL-CF/">[Project page]</a> &nbsp;
               <a href="https://arxiv.org/abs/2511.20157">[PDF]</a> &nbsp;
               <a href="https://github.com/Intellindust-AI-Lab/SKEL-CF">[Code (GitHub)]</a> &nbsp;
               <a class="github-button" href="https://github.com/Intellindust-AI-Lab/SKEL-CF" data-icon="octicon-star" data-size="medium" data-show-count="true">Star</a>
